Bug 291103 - regression: shift + drag and drop doesn't move the files
Summary: regression: shift + drag and drop doesn't move the files
Status: CLOSED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-10 00:13 UTC by G360
Modified: 2018-03-25 17:14 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments
drag and drop dialog (5.98 KB, image/png)
2012-01-10 00:13 UTC, G360
Details

Note You need to log in before you can comment on or make changes to this bug.
Description G360 2012-01-10 00:13:08 UTC
Created attachment 67629 [details]
drag and drop dialog

Version:           2.0 (using Devel) 
OS:                Linux

When dragging and dropping a file or folder to another folder, and when pressing the Shift key, the data should be moved[1], when pressing Ctrl+Shift, a link should be created, and when pressing Ctrl the data should be copied.

With KDE 4.7.97, Dolphin copies the data when you press Shift, Ctrl+Shift, or only Ctrl.

[1]As showed by the dialog (screenshot) that appears when you do a drag and drop to a folder, and release the mouse.

Reproducible: Always

Steps to Reproduce:
Drag and drop to a folder pressing Shift, Ctrl+Shift, or Ctrl.


Expected Results:  
The data should be moved, linked, or copied respectively.
Comment 1 Burkhard Lück 2012-01-10 08:46:57 UTC
Reproducable using recent master compiled from sources
Comment 2 Peter Penz 2012-01-10 16:23:53 UTC
Git commit a21371b6599fc0fb593e37224d4bd9043ed23783 by Peter Penz.
Committed on 10/01/2012 at 17:22.
Pushed by ppenz into branch 'KDE/4.8'.

Fix issue that shift + drag does not move files
FIXED-IN: 4.8.0

M  +1    -1    dolphin/src/kitemviews/kitemlistcontroller.cpp

http://commits.kde.org/kde-baseapps/a21371b6599fc0fb593e37224d4bd9043ed23783
Comment 3 Peter Penz 2012-01-10 16:24:17 UTC
Git commit 509940c73442587b6456a6070210a2ce59bad764 by Peter Penz.
Committed on 10/01/2012 at 17:22.
Pushed by ppenz into branch 'master'.

Fix issue that shift + drag does not move files
FIXED-IN: 4.8.0

M  +1    -1    dolphin/src/kitemviews/kitemlistcontroller.cpp

http://commits.kde.org/kde-baseapps/509940c73442587b6456a6070210a2ce59bad764