Fix issue that shift + drag does not move files

BUG: 291103
FIXED-IN: 4.8.0